LaboratorioKubernetes/distributed-yaml/deploy_api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
  namespace: distributed
spec:
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
      - name: todo-api
        image: romandorosh/lc-todo-api-distributed
        ports:
        - containerPort: 3000
status: {}
