LaboratorioKubernetes/distributed-yaml/deploy_front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-front
  namespace: distributed
spec:
  selector:
    matchLabels:
      app: todo-front
  template:
    metadata:
      labels:
        app: todo-front
    spec:
      containers:
      - name: todo-front
        image: romandorosh/lc-todo-front-distributed
        ports:
        - containerPort: 80
status: {}
