LaboratorioKubernetes/distributed-yaml/svc-api.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-api
  name: todo-api-svc
  namespace: distributed
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: todo-api
