LaboratorioKubernetes/distributed-yaml/svc-front.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-front
  name: todo-front-svc
  namespace: distributed
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: todo-front
